[project]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = [
    {name = "bubblerion",email = "windowrains@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
